--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -110,7 +110,7 @@
 
     protected ElementReference gameFieldDiv;
 
-    protected async override void OnInitialized()
+    protected override void OnInitialized()
     {
         SpawnCoins();
 
