Failing at scrolling with a view port

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -117,7 +117,7 @@
     };
     private int[,] lightMap = new int[GAME_FIELD_HEIGHT, GAME_FIELD_WIDTH];
 
-    protected ElementReference gameFieldDiv;
+    private ElementReference gameFieldDiv;
 
     protected override void OnInitialized()
     {
